--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@trpc/client": "11.0.0-rc.477",
     "@trpc/next": "11.0.0-rc.477",
     "@trpc/server": "11.0.0-rc.477",
+    "d3": "^7.9.0",
     "next": "^15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:^",
     "@repo/tsconfig": "workspace:*",
+    "@types/d3": "^7.4.3",
     "@types/node": "^22.14.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
